venga que esta vez si

--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -1002,7 +1002,7 @@
    "metadata": {},
    "source": [
     "#### Conclusión.\n",
-    "El modelo con residuales de 30 días es el mejor, con el menor AIC y BIC** nota **, lo que indica un ajuste superior.  \n",
+    "El modelo con residuales de 30 días es el mejor, con el menor AIC y BIC, lo que indica un ajuste superior. Con una baja diferencia con el de 14 días, el cual graficado parece incluso más adecuado\n",
     "Los datos originales son los menos adecuados para el modelo debido a la tendencia no estacionaria.\n",
     "\n"
    ]
